work in progress

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
-# This file collects all required third-party applications that are 
+# This file collects all required third-party applications that are
 # needed to run this project. Later you can install all these apps
 # in a row  using pip.
 #  Example::
 #
-#     pip install -r requirements.pip
+#     pip install -r requirements.txt
 
 # python modules
-markdown
 psycopg2
 PIL
 
@@ -23,4 +22,3 @@ django-grappelli==2.3.3
 # backbeat apps
 git+git://github.com/dmeehan/django-backbeat-contacts.git
 git+git://github.com/dmeehan/django-backbeat-projects.git
-
