--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@
 # python modules
 psycopg2
 PIL
+geopy
 
 # django third party modules
 django==1.3
@@ -17,4 +18,5 @@ django-taggit==0.9.3
 django-categories==0.7.1
 django-imagekit==0.3.6
 django-generic-flatblocks==0.9.1
-django-grappelli==2.3.3
+django-grappelli==2.3.3]
+django-easy-maps==0.7.1
