--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,6 @@ django-imagekit==0.3.6
 django-generic-flatblocks==0.9.1
 django-grappelli==2.3.3
 django-easy-maps==0.7.1
+
+# backbeat apps
+-e git+git://github.com/dmeehan/django-backbeat-media.git#egg=django-backbeat-media
