integrated django-categories through settings

--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ django-imagekit==0.3.6
 django-generic-flatblocks==0.9.1
 django-grappelli==2.3.3
 django-easy-maps==0.7.1
+django-categories==0.8.1
 
 # backbeat apps
 -e git+git://github.com/dmeehan/django-backbeat-images.git#egg=django-backbeat-images
