--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django==1.3
 south==0.7.3
 django-haystack==1.2.4
 django-taggit==0.9.3
+django-taggit-templatetags==0.4.6dev
 django-imagekit==0.3.6
 django-generic-flatblocks==0.9.1
 django-grappelli==2.3.3
