--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-generic-flatblocks==0.9.1
 django-grappelli==2.3.3
 django-easy-maps==0.7.1
 django-categories==0.8.1
+django-oembed==0.1.3
 
 # backbeat apps
 -e git+git://github.com/dmeehan/django-backbeat-images.git#egg=django-backbeat-images
