--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,7 @@ django-grappelli==2.3.3
 django-easy-maps==0.7.1
 django-categories==0.8.1
 django-oembed==0.1.3
+django-compressor==1.1.1
 
 # backbeat apps
 -e git+git://github.com/dmeehan/django-backbeat-images.git#egg=django-backbeat-images
