--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,13 @@
 
 # python modules
 psycopg2
-PIL
+pillow
 geopy
 markdown
 python-memcached
 
 # django third party modules
-django==1.3.1
+django==1.3.7
 south==0.7.3
 django-haystack==1.2.4
 django-taggit==0.9.3
