--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,4 @@ django-easy-maps==0.7.1
 django-categories==0.8.1
 django-oembed==0.1.3
 django-compressor==1.1.1
+django-positions==0.5.1 # ordering field
